--- a/usuarios/templates/detalle_usuarios.html
+++ b/usuarios/templates/detalle_usuarios.html
@@ -16,7 +16,7 @@ Detalle de cuenta
                 <br>
                 <div class="d-flex justify-content-around">
                     {% if usuario.foto %}
-                        <img src="{% get_media_prefix %}{{usuario.foto}}" alt="" style="height: 200px; width: 200px" class="rounded-circle">
+                        <img src="{{usuario.foto.url}}" alt="" style="height: 200px; width: 200px" class="rounded-circle">
                     {% else %}
                         <img src="{% get_media_prefix %}img/usuario.png" alt="" style="height: 200px; width: 200px">
                     {% endif %}
