Corregir direccion y margin de lista de recientes en index

--- a/viajes/templates/index.html
+++ b/viajes/templates/index.html
@@ -7,72 +7,108 @@
 
 
 {% block body %}
+    <div class="contenedor">
 
-    <div class="container-image-index">
         
-        {% if user.is_authenticated %}
-            <br>
-        {% endif %}
-        <br>
-        <div class="container">
-            <h1>Encuentra tu mejor Reito</h1>
-        </div>
-        <br>
-        <div class="container-fluid separator">
-        
-            {% if user.is_authenticated %}
-                {% include "barra_busqueda.html" %}
-            {% endif %}
+        <div class="container-image-index">
             
-            {% if not user.is_authenticated %}
+            {% if user.is_authenticated %}
+            <br>
+            {% endif %}
+            <br>
+            <div class="container">
+                <h1>Encuentra tu mejor Reito</h1>
+            </div>
+            <br>
+            <div class="container-fluid separator">
+                
+                {% if user.is_authenticated %}
+                {% include "barra_busqueda.html" %}
+                {% endif %}
+                
+                {% if not user.is_authenticated %}
                 <img class="image-index" src="{% static 'img/fondo_autos2.png' %}" alt="Transporte">
             {% endif %}
         </div>
-
+        
         
         {% if user.is_authenticated %}
-            <br><br><br>
-            <div class="container">
-                <h2>Destinos frecuentes</h1>
+        <br><br><br>
+        <div class="container">
+            <h2>Destinos frecuentes</h1>
             </div>
             <div class="container-fluid separator">
                 {% for destino  in destinos  %}
-                    <a class = "destinos-frec" href="{% url 'viajes:buscar_viajes' destino.id%}">{{destino}}</a>
+                <a class = "destinos-frec" href="{% url 'viajes:buscar_viajes' destino.id%}">{{destino}}</a>
                 {% endfor %}
             </div>
-        {% endif %}
-
-
-        {% if user.is_authenticated %}
-        <div class="container col-sm-6 col-md-6 col-lg-12 justify-content-center align-items-center" style="object-position: 50% 50%;">
-
-            <br><br><br>
-            <div class="container">
-                <h2>&Uacuteltimos Reitos</h1>
-                <div class="container-fluid separator d-flex">
-                    {% for viaje  in viajes_recientes  %}
-                    <a href="{% url 'viajes:detalle' viaje.id %}" class="border rounded-3 list-group-item list-group-item-action align-items-start destino-item">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">{{viaje.conductor}}</h5>
-                            <small>${{viaje.precio}}</small>
+            {% endif %}
+            
+            
+            <!-- {% if user.is_authenticated %}
+            <div class="container col-sm-6 col-md-6 col-lg-12 justify-content-center align-items-center" >
+                
+                <br><br><br>
+                <div class="contenedor">
+                    <h2>&Uacuteltimos Reitos</h1>
+                        <div class="separator viajes-recientes">
+                            {% for viaje  in viajes_recientes  %}
+                            <a href="{% url 'viajes:detalle' viaje.id %}" class="border rounded-3 list-group-item list-group-item-action align-items-center destino-item">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">{{viaje.conductor}}</h5>
+                                    <small>${{viaje.precio}}</small>
+                                </div>
+                                <div class="text-center">
+                                    <h3>{{viaje.destino}}</h3>
+                                </div>
+                                <div>
+                                    <small>{{viaje.fecha}} - {{viaje.hora}}</small>
+                                </div>
+                            </a>
+                            {% endfor %}
                         </div>
-                        <div class="text-center">
-                            <h3>{{viaje.destino}}</h3>
+                    </div>
+                </div>
+                {% endif %} -->
+                
+                
+                
+                {% if user.is_authenticated%}
+                <br><br><br>
+                <div class="container align-items-center">
+                    <h2>&Uacuteltimos Reitos</h1>
+                    <div class="contenedor">
+
+                        <div class="viajes-recientes">
+                            
+                            {% for viaje  in viajes_recientes  %}
+                            <a href="{% url 'viajes:detalle' viaje.id %}" class="border rounded-3 list-group-item  align-items-center destino-item">
+                                <div class="d-flex justify-content-between">
+                                    <h5 class="mb-1">{{viaje.conductor}}</h5>
+                                    <small>${{viaje.precio}}</small>
+                                </div>
+                                <div class="text-center">
+                                    <h3>{{viaje.destino}}</h3>
+                                </div>
+                                <div>
+                                    <small>{{viaje.fecha}} - {{viaje.hora}}</small>
+                                </div>
+                            </a>
+                            {% endfor %}
+                            
                         </div>
-                        <div>
-                            <small>{{viaje.fecha}} - {{viaje.hora}}</small>
-                        </div>
-                    </a>
-                    {% endfor %}
                 </div>
             </div>
+            
+            
+            
+            {% endif %}
         </div>
-        {% endif %}
     </div>
-    
-
-    
-    
-{% endblock body %}
+        
+        
+        
+        
+        {% endblock body %}
     
     
