--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,6 +195,10 @@ div.estado_negativo {
     color:white;
 }
 
+.viajes-recientes {
+    display: flex;
+}
+
 @media (min-width: 990px) {
     .busqueda {
         left:35%
@@ -204,6 +208,10 @@ div.estado_negativo {
 @media (max-width: 989px) {
     .busqueda {
         left:25%
+    }
+
+    .viajes-recientes {
+        flex-direction: column;
     }
 }
 
@@ -223,6 +231,8 @@ div.estado_negativo {
     }
 }
 
+
+
 .destino-item:hover {
     background:#3A606E; 
     color:white;
@@ -232,6 +242,7 @@ div.estado_negativo {
     margin-bottom: 17.5px;
     margin-left: 17.5px;
     margin-right:17.5px;
+    width: 90%;
 }
 
 
