--- a/viajes/templates/index.html
+++ b/viajes/templates/index.html
@@ -43,44 +43,14 @@
                 {% endfor %}
             </div>
             {% endif %}
-            
-            
-            <!-- {% if user.is_authenticated %}
-            <div class="container col-sm-6 col-md-6 col-lg-12 justify-content-center align-items-center" >
+
                 
-                <br><br><br>
-                <div class="contenedor">
-                    <h2>&Uacuteltimos Reitos</h1>
-                        <div class="separator viajes-recientes">
-                            {% for viaje  in viajes_recientes  %}
-                            <a href="{% url 'viajes:detalle' viaje.id %}" class="border rounded-3 list-group-item list-group-item-action align-items-center destino-item">
-                                <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-1">{{viaje.conductor}}</h5>
-                                    <small>${{viaje.precio}}</small>
-                                </div>
-                                <div class="text-center">
-                                    <h3>{{viaje.destino}}</h3>
-                                </div>
-                                <div>
-                                    <small>{{viaje.fecha}} - {{viaje.hora}}</small>
-                                </div>
-                            </a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-                {% endif %} -->
-                
-                
-                
-                {% if user.is_authenticated%}
+            {% if user.is_authenticated%}
                 <br><br><br>
                 <div class="container align-items-center">
                     <h2>&Uacuteltimos Reitos</h1>
                     <div class="contenedor">
-
                         <div class="viajes-recientes">
-                            
                             {% for viaje  in viajes_recientes  %}
                             <a href="{% url 'viajes:detalle' viaje.id %}" class="border rounded-3 list-group-item  align-items-center destino-item">
                                 <div class="d-flex justify-content-between">
@@ -90,15 +60,15 @@
                                 <div class="text-center">
                                     <h3>{{viaje.destino}}</h3>
                                 </div>
-                                <div>
+                                <div class="d-flex justify-content-between">
                                     <small>{{viaje.fecha}} - {{viaje.hora}}</small>
                                 </div>
                             </a>
                             {% endfor %}
                             
                         </div>
+                    </div>
                 </div>
-            </div>
             
             
             
