--- a/viajes/templates/index.html
+++ b/viajes/templates/index.html
@@ -11,37 +11,41 @@
 
         
         <div class="container-image-index">
-            
-            {% if user.is_authenticated %}
-            <br>
-            {% endif %}
-            <br>
-            <div class="container">
-                <h1>Encuentra tu mejor Reito</h1>
-            </div>
-            <br>
-            <div class="container-fluid separator">
+                <br>
+                <div class="container">
+                    <h1>Encuentra tu mejor Reito</h1>
+                </div>
+                <br>
+                <div class="container-fluid separator">
+                    {% if user.is_authenticated %}
+                        {% include "barra_busqueda.html" %}
+                    {% endif %}
+                        
+                </div>
+        </div>
+    </div>
+        <div class="container-fluid separator">
                 
-                {% if user.is_authenticated %}
-                {% include "barra_busqueda.html" %}
-                {% endif %}
-                
-                {% if not user.is_authenticated %}
+            {% if not user.is_authenticated %}
                 <img class="image-index" src="{% static 'img/fondo_autos2.png' %}" alt="Transporte">
             {% endif %}
         </div>
+
         
+    <div class="contenedor">
+        <div class="container-image-index">
+
         
-        {% if user.is_authenticated %}
-        <br><br><br>
-        <div class="container">
-            <h2>Destinos frecuentes</h1>
-            </div>
-            <div class="container-fluid separator">
-                {% for destino  in destinos  %}
-                <a class = "destinos-frec" href="{% url 'viajes:buscar_viajes' destino.id%}">{{destino}}</a>
-                {% endfor %}
-            </div>
+            {% if user.is_authenticated %}
+                <br><br><br>
+                <div class="container">
+                    <h2>Destinos frecuentes</h1>
+                </div>
+                <div class="container-fluid separator">
+                    {% for destino  in destinos  %}
+                    <a class = "destinos-frec" href="{% url 'viajes:buscar_viajes' destino.id%}">{{destino}}</a>
+                    {% endfor %}
+                </div>
             {% endif %}
 
                 
@@ -77,8 +81,6 @@
     </div>
         
         
-        
-        
-        {% endblock body %}
+{% endblock body %}
     
     
