Agregar comentarios a index, agregar link de pagina de inicio en login

--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -35,6 +35,8 @@
             </form>
             <p>¿No tienes cuenta? Reg&iacute;strate <a href="{%url 'usuarios:signup'%}">aqu&iacute;</a>
             </p>
+            <p>P&aacute;gina de <a href="{%url 'viajes:index'%}">inicio</a>
+            </p>
         </div>
     </div>
 </body>
