--- a/viajes/templates/index.html
+++ b/viajes/templates/index.html
@@ -7,9 +7,9 @@
 
 
 {% block body %}
-    <div class="contenedor">
 
-        
+    <!-- Contenedor para barra de búsqueda y título -->
+    <div class="contenedor">
         <div class="container-image-index">
                 <br>
                 <div class="container">
@@ -24,18 +24,18 @@
                 </div>
         </div>
     </div>
+
+    <!-- Contenedor para imagen, fluid para que se extienda en toda la página -->
         <div class="container-fluid separator">
-                
             {% if not user.is_authenticated %}
                 <img class="image-index" src="{% static 'img/fondo_autos2.png' %}" alt="Transporte">
             {% endif %}
         </div>
 
-        
+    <!-- Contenedor para destinos frecuentes, viajes recientes -->
     <div class="contenedor">
         <div class="container-image-index">
-
-        
+            
             {% if user.is_authenticated %}
                 <br><br><br>
                 <div class="container">
@@ -73,9 +73,6 @@
                         </div>
                     </div>
                 </div>
-            
-            
-            
             {% endif %}
         </div>
     </div>
