--- a/viajes/templates/detalle_viaje_viajero.html
+++ b/viajes/templates/detalle_viaje_viajero.html
@@ -29,8 +29,15 @@
             {% if estado_reserva %}
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Tel&eacute;fono: {{telefono}}</li>
-                    <li class="list-group-item">Matr&iacute;cula de veh&iacute;culo: {{vehiculo.matricula}}</li>
-                    <li class="list-group-item">Descripci&oacute;n de veh&iacute;culo: {{vehiculo.descripcion}}</li>
+                    
+                    {% if vehiculo %}
+                        <li class="list-group-item">Matr&iacute;cula de veh&iacute;culo: {{vehiculo.matricula}}</li>
+                        <li class="list-group-item">Descripci&oacute;n de veh&iacute;culo: {{vehiculo.descripcion}}</li>
+                    {% else %}
+                        <li class="list-group-item">Este Reito no tiene veh&iacute;culo asignado.</li>
+                    {% endif %}
+                        
+                    
                     <!-- <li class="list-group-item"><strong>Matr&iacute;cula:</strong> {{vehiculo.matricula}}</li>
                     <li class="list-group-item"><strong>Autom&oacute;vil:</strong>{{vehiculo.descripcion}}</li> -->
                 </ul>
@@ -50,14 +57,21 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">Hora: {{viaje.hora}}</li>
             <li class="list-group-item">Precio: ${{viaje.precio}}</li>
-            <li class="list-group-item">Marca del veh&iacute;culo: {{vehiculo.marca}}</li>
-            <li class="list-group-item">Modelo del veh&iacute;culo: {{vehiculo.modelo}}</li>
             
-            {% if viaje.asientos == 1 %}
-                <li class="list-group-item">{{viaje.asientos}} asiento disponible</li>
+            {% if vehiculo %}
+                <li class="list-group-item">Marca del veh&iacute;culo: {{vehiculo.marca}}</li>
+                <li class="list-group-item">Modelo del veh&iacute;culo: {{vehiculo.modelo}}</li>
+                
+                {% if viaje.asientos == 1 %}
+                    <li class="list-group-item">{{viaje.asientos}} asiento disponible</li>
+                {% else %}
+                    <li class="list-group-item">{{viaje.asientos}} asientos disponibles</li> 
+                {% endif %}
             {% else %}
-                <li class="list-group-item">{{viaje.asientos}} asientos disponibles</li> 
+                <li class="list-group-item">Este Reito no tiene veh&iacute;culo asignado.</li>
+                
             {% endif %}
+                
                 
             
         </ul>
